Fix wrapping issue in description of project previews. Font changed. Additional styling added.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0; 
     padding: 0; 
     font-size: 16px; 
+    font-family: "Montserrat", sans-serif; 
 }
 
 /* Styles for header section */
@@ -12,11 +13,15 @@ header {
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed; 
+    z-index: 10; 
+    background-color: white; 
 }
 
 
 header h1 {
-    margin-left: 1em;
+    margin-left: 1em; 
+    font-family: "Oswald", sans-serif; 
 }
 
 header ul {
@@ -27,6 +32,12 @@ header li {
     display: inline-flex; 
     margin-left: 1em; 
     margin-right: 1em; 
+    text-decoration: underline; 
+    color: black; 
+}
+
+header li:hover {
+    text-decoration: none; 
 }
 
 /* Sections for "About Me" and "Skills" */
@@ -36,11 +47,42 @@ header li {
     justify-content: space-around; 
     width: 60%; 
     align-items: center;
-    margin: 8em auto; 
+    padding: 8em; 
     position: relative; 
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%); 
 }
+
+.image-text-section ul {
+    margin: 0.75em 0;
+    padding: 0 1em;
+    list-style: none;
+}
+
+.image-text-section li::before { 
+    content: "";
+    border-color: transparent #111;
+    border-style: solid;
+    border-width: 0.35em 0 0.35em 0.45em;
+    display: block;
+    height: 0;
+    width: 0;
+    left: -1em;
+    top: 0.9em;
+    position: relative;
+}
+
+/* About me section */ 
+
+.about-me {
+    /* background-image: url("https://img.static-kl.com/images/media/028AE86F-56BE-4562-A68B64D8F2EB2AA7"); 
+    background-size: cover; */
+    margin-top: 5em; 
+}
+
+/* Skills Section */ 
+
+
 
 /* Projects section */
 
@@ -56,7 +98,14 @@ header li {
 }
 
 .project-box {
-    max-width: 24em; 
+    display: flex; 
+    flex-direction: column; 
+}
+
+.project-box p {
+    width: 100%; 
+    max-width: 24rem; 
+    word-wrap: break-word; 
 }
 
 .project-desc-heading {
@@ -64,11 +113,15 @@ header li {
 }
 
 #github-link {
+    font-size: 1.2rem; 
     margin: 4rem; 
-    border: black solid 1px; 
+    border-radius: 0.5em; 
     width: 12em; 
     padding: 2em; 
-    align-self: center;
+    align-self: center; 
+    text-decoration: none; 
+    color: white; 
+    background-color: black;
 }
 
 /* Contact Me section, footer */
